update flashmovie & media player depreceated tags (subsitute elements by css att), add alt att to img in base detail. Improve view full content category

--- a/cyclope/core/collections/templates/collections/category_contents_base.html
+++ b/cyclope/core/collections/templates/collections/category_contents_base.html
@@ -41,7 +41,7 @@
             {% if category.description and view_options.show_description or category.image and view_options.show_image %}
             <div class="collection_teaser">
                 {% if category.image and view_options.show_image %}
-                <img class="image" src="{% version category.image.path 'fb_thumb' %}" border="0"/>
+                <img alt="{{ category.image.path }}" class="image" src="{% version category.image.path 'fb_thumb' %}"/>
                 {% endif %}
                 {% if category.description and view_options.show_description %}
                 <div class="summary">{{ category.description|smart_style }}</div>
@@ -67,7 +67,7 @@
       {% if category.description and view_options.show_description or category.image and view_options.show_image %}
       <div class="collection_teaser">
         {% if category.image and view_options.show_image %}
-        <img class="image" src="{% version category.image.path 'small' %}" border="0"/>
+        <img alt="{{ category.image.path }}" class="image" src="{% version category.image.path 'small' %}" border="0"/>
         {% endif %}
         {% if category.description and view_options.show_description %}
         <div class="summary">{{ category.description|smart_style }}</div>
