--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
@@ -15,17 +15,18 @@
 
 		{% include 'cyclope/content_tools_block.html' %}
 
-		{% include "cyclope/author_block.html" with author=current_object.author %}
-
         {% block media_content_download %}
 				<a class="action-content download_link btn btn-success" target="_blank" href="{{ current_object.media_file }}">{% trans "download file" %}</a>
 		{% endblock %}
 
+		{% include "cyclope/author_block.html" with author=current_object.author %}
+
 		{% if current_object.image %}
 			<div class="media-content">
 				{% if current_object.content_url %}<a href="{{ current_object.content_url }}" {% if current_object.new_window %}target="_blank"{% endif%} >{% endif%}
-				<img class="center img-responsive" align="center" src="{% version current_object.image.path 'big' %}"/>
-				{% if current_object.content_url %}</a>{% endif%}
+				<!--<img class="center img-responsive" align="center" src="{% version current_object.image.path 'big' %}"/>-->
+				<img alt="{{ current_object.image.name }}" class="center img-responsive" src="{% version current_object.image.path 'big' %}"/>
+                {% if current_object.content_url %}</a>{% endif%}
 			</div>
 		{% endif %}
 
