--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -81,18 +81,18 @@ span.category_title a {color:#000;}
 /* Full Category content -  media_library_base_detail */
 .content-view.externalcontent.media.detail .tools.meta-content,
 .content-view.pictures.media.detail .tools.meta-content,
-.content-view.article.media.detail .tools.meta-content,
-.content-view.document.media.detail .tools.meta-content	{
+.content-view.document.media.detail .tools.meta-content,
+.content-view.article.media.detail .tools.meta-content	{
 	padding: 5px 10px;
+}
+
+.content-view.media.detail .tools.meta-content .list-inline{
+	margin: 0;
 }
 
 .content-view.document.media.detail .html-content.summary{
 	clear: both;
 	margin-top: 10px;
-}
-
-.content-view.document.media.detail .meta-content{
-	padding:5px 0;
 }
 
 .meta-content+a{
@@ -116,7 +116,14 @@ span.category_title a {color:#000;}
 }
 
 .content-view.article.inline_detail.article-inline_detail .pretitle{
-	display: none;
+	margin: 0;
+}
+
+.content-view.soundtrack.media.detail .mejs-container.mejs-audio{
+	height: 30px !important;
+	width: 240px !important;
+	float: none;
+	margin: 0 auto;
 }
 
 .content-view.document.media.detail,
@@ -126,7 +133,26 @@ span.category_title a {color:#000;}
     border-bottom: solid 2px #f5f5f5;
 }
 
+.flashmovie-inline-detail{
+	width: 100%;
+	height: 550px;
+}
 
+.flashmovie-inline-detail embed,
+.flashmovie-inline-detail object{
+	width: 100% !important;
+	height: 100% !important;
+}
+
+.player video{
+	width: 480px;
+	height: 360px
+}
+
+.player object{
+	width: 480px;
+	height: 360px;
+}
 
 /* ### teaser labeled icon ### */
 
