Changed the image_version in collection_info

--- a/cyclope/core/collections/templates/collections/collection_info.html
+++ b/cyclope/core/collections/templates/collections/collection_info.html
@@ -7,7 +7,7 @@
             <div class="collection_teaser">
                 {% if collection.image %}
                 <div class="collection_image">
-                    <img class="image" src="{% version collection.image.path 'medium' %}" border="0"/>
+                    <img class="image" src="{% version collection.image.path 'fb_thumb' %}" border="0"/>
                 </div>
                 {% endif %}
                 <div class="summary">
@@ -17,7 +17,7 @@
             {% else %}
                 {% if collection.image %}
                 <div class="collection_teaser">
-                    <img class="image" src="{% version collection.image.path 'medium' %}" border="0"/>
+                    <img class="image" src="{% version collection.image.path 'fb_thumb' %}" border="0"/>
                 </div>
                 {% endif %}
             {% endif %}
