add TODO tags to fix existings issues, add some help_text, fix html wrapping tags, improve Detail View of selected File

--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_inline_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_inline_detail.html
@@ -1,4 +1,6 @@
 {% extends "medialibrary/medialibrary_base_detail.html" %}
 
+<!--TODO: Separate base from inline -->
+
 {% block media_comments %}
 {% endblock %}
