article label icon list

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -93,7 +93,6 @@ span.category_title a {color:#000;}
 .html-content.summary {
     clear: both;
 	padding: 10px 0;
-    text-align: justify;
 }
 
 .meta-content+a{
@@ -106,14 +105,6 @@ span.category_title a {color:#000;}
 
 .content-view.article.inline_detail.article-inline_detail h3>span{
 	font-size: 15px;
-}
-
-.content-view.document.media.detail .html-content.summary p,
-.content-view.article.inline_detail.article-inline_detail .summary p,
-.content-view.article.inline_detail.article-inline_detail .article_content p,
-.content-view.externalcontent.media.detail p,
-.content-view.flashmovie.media.detail p{
-	text-align: justify;
 }
 
 .content-view.article.inline_detail.article-inline_detail .pretitle{
@@ -279,6 +270,20 @@ td.comment {
 .comments small{
 	margin: 0 9px;
 }
+
+/* list of Article labeled Icons*/
+.teaser_icon .thumbnail .caption{
+	text-align: center;
+}
+
+.teaser_icon .thumbnail img{
+	margin-top: 20px;
+}
+
+.teaser_icon .thumbnail img.type_icon{
+	margin: 0;
+}
+
 
 /* ### alphabetical teaser list of all the members of the Collection's Categories ### */
 .alphabetical-pagination .pagination > li > a {text-align:center;margin:0 5px 0 0;}
