Improved the contact view in menu and layout

--- a/cyclope/apps/contacts/templates/contacts/contact_teaser.html
+++ b/cyclope/apps/contacts/templates/contacts/contact_teaser.html
@@ -24,11 +24,13 @@
                     <li><strong>{% trans "Web" %}:</strong> {{contact.web}}</li>
                     <li><strong>{% trans "Mobile" %}:</strong> {{contact.mobile_phone_number}}</li>
                 </ul>
-                <a class="btn btn-default" href="{% url contact-detail contact.slug %}">{% trans "More" %}</a>
-                <!-- herramientas -->
-                {% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
-                <!-- /herramientas -->
-                <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/contact.png" alt="contact" />
+                <div class="contact_more">
+                    <a class="btn btn-primary" href="{% url contact-detail contact.slug %}">{% trans "More" %}</a>
+                    <!-- herramientas -->
+                    {% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
+                    <!-- /herramientas -->
+                    <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/contact.png" alt="contact" />
+                </div>
             </div>
         </div>
     </div>    
