add class main-block on content div to separate from #left and #right regions, because otherwise it's too hard to diferenciate standart lists (like teaser-list) whererver they are set

--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_two_columns_left.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_two_columns_left.html
@@ -5,7 +5,7 @@
 
 {% block page_content %}
     <div class="col-xs-12 col-sm-3">{% region 'left' %}</div>
-    <div class="col-xs-12 col-sm-9">
+    <div class="col-xs-12 col-sm-9 main-block">
         {% region 'top' %}
         {% block content %}{% endblock %}
         {% region 'bottom' %}
