--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -149,31 +149,51 @@ span.category_title a {color:#000;}
 /* ### teaser labeled icon ### */
 
 .icon_list_container .title {text-align:center;height:40px;overflow:hidden;margin:10px 0 0;}
+
 .icon_list_container .teaser_more {text-align:center;}
+
 .icon_list_container .thumbnail .caption {padding:2px;}
 
 
 /* ### teaser list of Category members left and right ### */
+
 #right .teaser_icon_container, #left .teaser_icon_container {display:block;float:none;padding:4px;}
+
 #right .teaser_text_container, #left .teaser_text_container {width:100% ;display:inline;margin-top:5px;}
-#right .teaser_icon_container img, #left .teaser_icon_container img {margin:0 auto; }
+
+#right .teaser_icon_container img, #left .teaser_icon_container img {margin:0 auto; width: 100%}
+
 #right .teaser h2.title, #left .teaser h2.title {font-size:18px;font-weight:700;margin-bottom:5px;}
+
 #right .teaser .summary, #left .teaser .summary {font-size:12px; margin:0;}
+
 #right .btn, #left .btn {padding: 1px 5px;font-size: 12px;line-height: 1.5;border-radius: 3px;}
+
 #right .pretitle-container, #left .pretitle-container {font-size:12px;}
+
 #right .author, #left .author {font-size:12px; margin-top:5px; margin-bottom:5px;}
+
 #right .teaser_more, #left .teaser_more {margin:0 0 10px;}
+
 #right .teaser_more img, #left .teaser_more img {width:10%;}
 
 
 /* ### teaser list of Category of a collection left and right ### */
+
 #right .collection h1.title, #left .colecction h1.title {font-size:22px;border-top: 1px solid #000;border-bottom: 1px solid #000;font-weight: 600;}
+
 #right .collection_image img, #left .collection_image img {width:70%;padding:0;}
+
 #right .collection .summary, #left .collection .summary {font-size:12px;}
+
 #right .teaser, #left .teaser {padding-bottom:10px; margin-bottom:5px;}
+
 #right .collection_teaser, #left .collection_teaser {margin:0;}
+
 #right .category_title, #left .category_title {font-size:22px;border-top: 1px solid #000;border-bottom: 1px solid #000;font-weight: 600;}
+
 #right .collection_header, #left .collection_header {margin:0;}
+
 #right .category_root_item_list ul, #left .category_root_item_list ul {margin-top:10px; padding-left:15px;}
 
 /*  category list as forum  */
@@ -220,7 +240,7 @@ td.comment {
 }
 
 .link-create-topic .btn{
-	border-radius: 0px;
+	border-radius: 0;
 }
 
 .create_forum input#id_name{
@@ -250,6 +270,7 @@ td.comment {
 }
 
 /* Detail view of the selected File */
+
 #user_comments .comments{
 	margin-top: 30px;
 }
@@ -300,6 +321,19 @@ td.comment {
 /*### carousel view of Category members###*/
 .carousel .carousel-indicators {Bottom:0;}
 .carousel .media {margin-top:0;}
+
+/*### Article Teaser list  Left and Right ###*/
+#right .article.teaser-list > .teaser.article-teaser > .teaser_icon_container,
+#left .article.teaser-list > .teaser.article-teaser > .teaser_icon_container{
+	width: 100% !important;
+}
+
+
+/*### Article Teaser list ###*/
+div:not(#right ) .teaser.article-teaser > .teaser_icon_container,
+div:not(#left) .teaser.article-teaser > .teaser_icon_container{
+	width: 30%;
+}
 
 /* region clears */
 header, footer, #top, #bottom, #right, #left {clear:both;}
