--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_three_columns.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_three_columns.html
@@ -6,7 +6,7 @@
 {% block page_content %}
     <div class="row">
        <div class="col-xs-12 col-sm-4 col-md-3">{% region 'left' %}</div>
-        <div class="col-xs-12 col-sm-4 col-md-6">
+        <div class="col-xs-12 col-sm-4 col-md-6 main-block">
             {% region 'top' %}
             {% block content %}{% endblock %}
             {% region 'bottom' %}
