--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_two_columns_right.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_two_columns_right.html
@@ -5,7 +5,7 @@
 
 {% block page_content %}
 	<div class="row">   
-		<div class="col-xs-12 col-sm-9">
+		<div class="col-xs-12 col-sm-9 main-block">
 			{% region 'top' %}
 			{% block content %}{% endblock %}
 			{% region 'bottom' %}
