Fixes all MarkItUp pictures button MarkItUp is default for all TextFields, that's why I'm including the media_iframe template in the change_form all admin pages inherit from. A better approach could be to insert it via Ajax

--- a/cyclope/templates/admin/change_form.html
+++ b/cyclope/templates/admin/change_form.html
@@ -83,6 +83,10 @@
 {# JavaScript for prepopulated fields #}
 {% prepopulated_fields_js %}
 
+
+{# TODO(NumericA) MediaWidget is used by any form containing a TextField #}
+{% include "media_widget/media_iframe.html" %}
+
 </div>
 </form></div>
 {% endblock %}
