--- a/cyclope/core/collections/templates/admin/collections/category/change_form.html
+++ b/cyclope/core/collections/templates/admin/collections/category/change_form.html
@@ -14,6 +14,7 @@
 
 <script type="text/javascript">
 //<![CDATA[
+(function($){
 $(function() {
   $("#id_parent").chainedSelect({
         parent: '#id_collection',
@@ -21,8 +22,8 @@ $(function() {
         value: 'category_id',
         label: 'category_name'
     });
-
 });
+})(django.jQuery)
 //]]>
 </script>
 
