--- a/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
@@ -1,5 +1,7 @@
 {% load i18n staticfiles %}
 
+<!--TODO (Maureen): remove inline JS-->
+
 {% block extra_head %}
 <script src="{% static 'mediaelement/mediaelement-and-player.min.js' %}"></script>
 <link rel="stylesheet" href="{% static 'mediaelement/mediaelementplayer.min.css' %}" type="text/css" />
