--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -34,7 +34,7 @@
   <!-- descripcion -->
   {% if article.summary %}
 		{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-			<h3 class="summary">{{ article|parsed_gettext:"summary"|smart_style }}</h3>
+			<h4 class="summary">{{ article|parsed_gettext:"summary"|smart_style }}</h4>
 		{% elif CYCLOPE_THEME_TYPE == 'classic' %}
 			<div class="summary">{{ article|parsed_gettext:"summary"|smart_style }}</div>
 		{% endif %}
@@ -49,7 +49,7 @@
 			{% with article.pictures.all|first as picture %}
 			<div class="{% inline_content_classes %}">
 					<div class="modals-picture" data-toggle="modal" data-target="#myModal">
-						<img class="center-block" src="{% version picture.image.path 'big' %}" alt="{{ picture.name }}"/>
+						<img class="center-block img-responsive" src="{% version picture.image.path 'big' %}" alt="{{ picture.name }}"/>
 						<div class="carousel-caption">
 								<p>{{ picture.name|truncatechars:80 }}</p>
 						</div>
