--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -173,7 +173,6 @@ span.category_title a {color:#000;}
 #right .teaser_more, #left .teaser_more, #right .contact_more, #left .contact_more {margin:0 0 10px;}
 #right .teaser_more img, #left .teaser_more img#right .contact_more img, #left .contact_more img {width:10%;}
 
-
 /* ### teaser list of Category of a collection left and right ### */
 #right .collection h1.title, #left .colecction h1.title {font-size:22px;border-top: 1px solid #000;border-bottom: 1px solid #000;font-weight: 600;}
 #right .collection_image img, #left .collection_image img {padding:0;}
@@ -184,8 +183,6 @@ span.category_title a {color:#000;}
 #right .collection_header, #left .collection_header {margin:0;}
 #right .category_root_item_list ul, #left .category_root_item_list ul {margin-top:10px; padding-left:15px;}
 
-<<<<<<< HEAD
-=======
 /*  category list as forum  */
 .forum{
 	overflow-x:auto;
@@ -283,13 +280,16 @@ header, footer, #top, #bottom, #right, #left {clear:both;}
 .categories_hierarchy > ul {font-size:18px;}
 .categories_hierarchy .collection_teaser {margin-bottom:10px;}
 
-
 /*### detailed of the select Article ###*/
 .text img {max-width:75%; margin:20px auto; display:block;}
 .vote-like{display:inline}
 .vote-results-pos{display:inline-block}
-.vote-dislike{display:inline-block}
+.vote-dislike{display:inline-block; margin-left:5px;}
 .vote-results-neg{display:inline-block}
+.article > .title {margin-top:0;}
+.article > .pretitle {margin-bottom:0;}
+.text p {margin:5px 0 10px;}
+.detail .carousel-caption{position:relative; left:0; right:0;}
 
 /*Contact*/
 .contact_fields  {margin:0 auto;}
@@ -298,3 +298,15 @@ header, footer, #top, #bottom, #right, #left {clear:both;}
 .contact_field {display:block;margin:0 auto;text-align:center;}
 .contact_field .text-right {font-weight:700;}
 .contact_fields small,.contact_fields .btn {margin:20px 0 0;}
+
+/*External Content*/
+.show_comment_form {margin:10px 0;}
+.action-content.download_link {margin:20px 0;}
+.detail .meta-content, .detail .ratings {margin-bottom:20px;}
+.detail .media-content {margin-bottom:20px;}
+.detail .submit {margin-bottom:20px;}
+
+
+
+
+
