improve views, fix extra div tag in list.html

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -191,7 +191,9 @@ span.category_title a {
   height: 550px;
 }
 .flashmovie-inline-detail embed,
-.flashmovie-inline-detail object {
+.flashmovie-inline-detail object,
+.flashmovie.media.detail object,
+.flashmovie.media.detail embed{
   width: 100% !important;
   height: 100% !important;
 }
@@ -448,6 +450,7 @@ td.last_comment {
 .carousel .media {
   margin-top: 0;
 }
+
 /*### Article Teaser list  Left and Right ###*/
 
 
