--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_inline_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_inline_detail.html
@@ -18,6 +18,8 @@
 
 {% block media_content_download %}
     <div class="action-content download_link">
-    <a class="btn btn-success" target="_blank" href="{{ current_object.media_file }}">{% trans "full screen view (new window)" %}</a>
+        <a class="btn btn-success" target="_blank" href="{{ current_object.media_file }}">
+            {% trans "full screen view (new window)" %}
+        </a>
     </div>
 {% endblock %}
