--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_two_columns_left.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_two_columns_left.html
@@ -4,11 +4,14 @@
 {% block body_class %}two_columns_left{% endblock %}
 
 {% block page_content %}
-    <div class="col-xs-12 col-sm-3">{% region 'left' %}</div>
-    <div class="col-xs-12 col-sm-9 main-block">
-        {% region 'top' %}
-        {% block content %}{% endblock %}
-        {% region 'bottom' %}
+    <div class="row">
+        <div class="col-xs-12 col-sm-3">{% region 'left' %}</div>
+            <div class="col-xs-12 col-sm-9 main-block">
+                {% region 'top' %}
+                {% block content %}{% endblock %}
+                {% region 'bottom' %}
+            </div>
     </div>
+
 {% endblock %}
 
