media widget template translations falta pagination_footer.html que necesita placeholders

--- a/cyclope/apps/media_widget/templates/media_widget/media_select.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_select.html
@@ -15,7 +15,7 @@
             {% endif %}
             <td style="vertical-align: middle;">{{ media.name }}</td>
             <td style="vertical-align: middle;">
-                <button class="select_media btn btn-primary btn-xs" value="{{media.media_file}}">Seleccionar</button>
+                <button class="select_media btn btn-primary btn-xs" value="{{media.media_file}}">{% trans 'Seleccionar' %}</button>
             <td/>
         <tr/>
     {% endfor %}
