--- a/cyclope/apps/media_widget/templates/media_widget/picture_form.html
+++ b/cyclope/apps/media_widget/templates/media_widget/picture_form.html
@@ -5,16 +5,16 @@
 {{ form.non_field_errors }}
 
 <div class="form-group {% if form.image.errors %}has-error bg-danger{% else %}bg-success{% endif %}">
-    <label for="file">Im&aacute;gen</label>
+    <label for="file">{% trans 'Im&aacute;gen' %}</label>
     {{ form.image }}
     <span id="helpName" class="help-block">
         {{ form.image.errors }}
     </span>
-    <p class="help-block">Seleccionar im&aacute;gen para subir</p>
+    <p class="help-block">{% trans 'Seleccionar im&aacute;gen para subir' %}</p>
 </div>
 
 <div class="form-group {% if form.name.errors %}has-error{% endif %}">
-    <label for="fileName">Nombre</label>
+    <label for="fileName">{% trans 'Nombre' %}</label>
     {{ form.name }}
     <span id="fileName" class="help-block">
         {{ form.name.errors }}
@@ -22,7 +22,7 @@
 </div>
 
 <div class="form-group {% if form.description.errors %}has-error{% endif %}">
-    <label for="fileDesc">Descripci&oacute;n</label>
+    <label for="fileDesc">{% trans 'Descripci&oacute;n' %}</label>
     {{ form.description }}
     <span id="helpName" class="help-block">
         {{ form.description.errors }}
@@ -33,10 +33,10 @@
     <div class="col-xs-6">
         <button type="submit" class="btn btn-danger btn-block btn-lg">
             <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
-            Subir
+            {% trans 'Subir' %}
         </button>
     </div>
     <div class="col-xs-6 text-muted" style="font-size: 10px;">
-        Recuerda que puedes agregar m&aacute;s datos a este contenido desde la Biblioteca Multimedia.
+        {% trans 'Recuerda que puedes agregar m&aacute;s datos a este contenido desde la Biblioteca Multimedia.' %}
     </div>
 </div>
