--- a/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
@@ -46,19 +46,19 @@
                     <li role="presentation" {% if n == 1 %}class="active"{% endif %}>
                         <a href="#upload" aria-controls="upload" role="tab" data-toggle="tab">
                             <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
-                            Subir
+                            {% trans 'Subir' %}
                         </a>
                     </li>
                     <li role="presentation" {% if n > 1 %}class="active"{% endif %}>
                         <a href="#search" aria-controls="search" role="tab" data-toggle="tab">
                             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                            Buscar en biblioteca
+                            {% trans 'Buscar en biblioteca' %}
                         </a>
                     </li>
                     <li role="presentation">
                         <a href="#delete" aria-controls="search" role="tab" data-toggle="tab">
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            Eliminar
+                            {% trans 'Eliminar' %}
                         </a>
                     </li>
                 </ul>
@@ -77,7 +77,7 @@
         </div>
         <div class="row text-center">
             <br />
-            <button id="btn-volver" type="button" class="btn btn-default btn-lg btn-block">Volver <small>(Esc)</small></button>
+            <button id="btn-volver" type="button" class="btn btn-default btn-lg btn-block">{% trans 'Volver' %} <small>(Esc)</small></button>
         </div>
     </div>
 </body>
